Update UnnamedVariablesDemo.java